--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <gravitee-cockpit-api.version>1.12.0</gravitee-cockpit-api.version>
         <gravitee-common.version>1.27.0</gravitee-common.version>
         <gravitee-connector-api.version>1.1.2</gravitee-connector-api.version>
-        <gravitee-expression-language.version>1.10.1-feat-endpoint-SNAPSHOT</gravitee-expression-language.version>
+        <gravitee-expression-language.version>1.11.0</gravitee-expression-language.version>
         <gravitee-fetcher-api.version>1.4.0</gravitee-fetcher-api.version>
         <gravitee-gateway-api.version>1.40.0</gravitee-gateway-api.version>
         <gravitee-license-node.version>1.3.1</gravitee-license-node.version>
