--- a/gravitee-apim-distribution/pom.xml
+++ b/gravitee-apim-distribution/pom.xml
@@ -156,6 +156,14 @@
             <type>zip</type>
         </dependency>
 
+        <dependency>
+            <groupId>io.gravitee.apim.plugin.entrypoint</groupId>
+            <artifactId>gravitee-apim-plugin-entrypoint-webhook</artifactId>
+            <version>${project.version}</version>
+            <scope>runtime</scope>
+            <type>zip</type>
+        </dependency>
+
         <!-- Endpoints -->
         <dependency>
             <groupId>io.gravitee.apim.plugin.endpoint</groupId>
