--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/pom.xml
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/pom.xml
@@ -36,5 +36,6 @@
         <module>gravitee-apim-plugin-entrypoint-handler</module>
         <module>gravitee-apim-plugin-entrypoint-sse</module>
         <module>gravitee-apim-plugin-entrypoint-http-post</module>
+        <module>gravitee-apim-plugin-entrypoint-webhook</module>
     </modules>
 </project>
