--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1177,10 +1177,16 @@ jobs:
             - run:
                   name: Git release <<# pipeline.parameters.dry_run >> - Dry Run<</ pipeline.parameters.dry_run >>
                   command: |
-                      export MVN_PRJ_VERSION="<< pipeline.parameters.graviteeio_version >>"
-                      export MVN_PRJ_VERSION_MAJOR=$(echo $MVN_PRJ_VERSION | awk -F '.' '{print $1}')
-                      export MVN_PRJ_VERSION_MINOR=$(echo $MVN_PRJ_VERSION | awk -F '.' '{print $2}')
-                      export MVN_PRJ_VERSION_PATCH=$(echo $MVN_PRJ_VERSION | awk -F '.' '{print $3}')
+                      export MVN_PRJ_VERSION_WITH_MODIFIER="<< pipeline.parameters.graviteeio_version >>"         # 3.19.0-alpha.1 or 3.19.0
+                      
+                      export MVN_PRJ_VERSION=$(echo $MVN_PRJ_VERSION_WITH_MODIFIER | awk -F '-' '{print $1}')     # 3.19.0
+                      export MVN_PRJ_VERSION_MAJOR=$(echo $MVN_PRJ_VERSION | awk -F '.' '{print $1}')             # 3
+                      export MVN_PRJ_VERSION_MINOR=$(echo $MVN_PRJ_VERSION | awk -F '.' '{print $2}')             # 19 
+                      export MVN_PRJ_VERSION_PATCH=$(echo $MVN_PRJ_VERSION | awk -F '.' '{print $3}')             # 0 
+                    
+                      export MVN_PRJ_MODIFIER=$(echo $MVN_PRJ_VERSION_WITH_MODIFIER | awk -F '-' '{print $2}')    # alpha.1 or empty
+                      export MVN_PRJ_MODIFIER_NAME=$(echo $MVN_PRJ_MODIFIER | awk -F '.' '{print $1}')            # alpha or empty
+                      export MVN_PRJ_MODIFIER_VERSION=$(echo $MVN_PRJ_MODIFIER | awk -F '.' '{print $2}')         # 1  or empty                      
 
                       # Remove `-SNAPSHOT` from source
                       # Backend
@@ -1215,8 +1221,12 @@ jobs:
                       if [ "${CIRCLE_BRANCH}" == "master" ]; then
                         sed -i "s#<revision>.*</revision>#<revision>${MVN_PRJ_VERSION_MAJOR}.$((${MVN_PRJ_VERSION_MINOR}+1)).0</revision>#" pom.xml
                         sed -i "s#<changelist>.*</changelist>#<changelist>-SNAPSHOT</changelist>#" pom.xml
-                      else
+                      elif [ "${MVN_PRJ_MODIFIER}" == ""]; then
                         sed -i "s#<revision>.*</revision>#<revision>${MVN_PRJ_VERSION_MAJOR}.${MVN_PRJ_VERSION_MINOR}.$((${MVN_PRJ_VERSION_PATCH}+1))</revision>#" pom.xml
+                        sed -i "s#<changelist>.*</changelist>#<changelist>-SNAPSHOT</changelist>#" pom.xml
+                      else
+                        sed -i "s#<revision>.*</revision>#<revision>${MVN_PRJ_VERSION_MAJOR}.${MVN_PRJ_VERSION_MINOR}.${MVN_PRJ_VERSION_PATCH}</revision>#" pom.xml
+                        sed -i "s#<sha1>.*</sha1>#<sha1>${MVN_PRJ_MODIFIER_NAME}.$((${MVN_PRJ_MODIFIER_VERSION}+1))</sha1>#" pom.xml
                         sed -i "s#<changelist>.*</changelist>#<changelist>-SNAPSHOT</changelist>#" pom.xml
                       fi;
 
