--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/pom.xml
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/pom.xml
@@ -35,5 +35,6 @@
     <modules>
         <module>gravitee-apim-plugin-entrypoint-handler</module>
         <module>gravitee-apim-plugin-entrypoint-sse</module>
+        <module>gravitee-apim-plugin-entrypoint-http-post</module>
     </modules>
 </project>
