feat(entrypoint): add a new http-get entrypoint
gravitee-i/issues#8037

--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/pom.xml
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/pom.xml
@@ -35,6 +35,7 @@
     <modules>
         <module>gravitee-apim-plugin-entrypoint-handler</module>
         <module>gravitee-apim-plugin-entrypoint-sse</module>
+        <module>gravitee-apim-plugin-entrypoint-http-get</module>
         <module>gravitee-apim-plugin-entrypoint-http-post</module>
         <module>gravitee-apim-plugin-entrypoint-webhook</module>
         <module>gravitee-apim-plugin-entrypoint-websocket</module>
