--- a/gravitee-apim-rest-api/gravitee-apim-rest-api-management/gravitee-apim-rest-api-management-rest/pom.xml
+++ b/gravitee-apim-rest-api/gravitee-apim-rest-api-management/gravitee-apim-rest-api-management-rest/pom.xml
@@ -191,6 +191,8 @@
                         <info>
                             <title>Gravitee.io - Management API</title>
                             <version>${project.version}</version>
+                            <!-- TODO: Remove the following line when v4 API is stable-->
+                            <description>Some news resources are in alpha version. This implies that they are likely to be modified or even removed in future versions. They are marked with the 🧪 symbol</description>
                         </info>
                     </swaggerConfig>
 
