chore: properly set `engines` properties on Console and Portal package.json
The end goal is to help Renovate use the correct version of NPM when doing the update.
It looks like having `.nvmrc` in nested folders isn't working.

--- a/gravitee-apim-console-webui/package.json
+++ b/gravitee-apim-console-webui/package.json
@@ -147,7 +147,8 @@
     "webpack-dev-server": "4.7.3"
   },
   "engines": {
-    "node": ">=14.17"
+    "node": "^16.10",
+    "npm": "^7.24"
   },
   "scripts": {
     "build:prod": "webpack -c ./conf/webpack-dist.conf.js",
