--- a/gravitee-apim-portal-webui/package.json
+++ b/gravitee-apim-portal-webui/package.json
@@ -59,6 +59,10 @@
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
+  "engines": {
+    "node": "^16.10",
+    "npm": "^7.24"
+  },
   "devDependencies": {
     "@angular-builders/jest": "13.0.3",
     "@angular-devkit/build-angular": "13.3.0",
