--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1818,6 +1818,7 @@ workflows:
                               - master
                               - /^\d+\.\d+\.x$/
                               - refactor-distribution-build-process
+                              - 8386-refactor-context
                   requires:
                       - test
                       - test-repository
